--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@types/node": "20.4.2",
-    "@types/react": "^18.0.0",
+    "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "install": "^0.13.0",
     "next": "13.4.10",
     "npm": "^9.8.1",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
     "typescript": "5.1.6"
