--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "react-scroll": "^1.8.9",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.7"
   }
 }
