--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
