--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-player": "^2.12.0",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-facebook-login": "^4.1.5",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
