--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "firebase": "^10.1.0",
+    "graphql": "^16.7.1",
+    "graphql-request": "^6.1.0",
     "install": "^0.13.0",
     "next": "13.4.10",
     "npm": "^9.8.1",
