--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@stripe/stripe-js": "^2.1.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -24,7 +25,7 @@
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "install": "^0.13.0",
-    "next": "13.4.10",
+    "next": "^13.4.10",
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +33,7 @@
     "react-player": "^2.12.0",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
+    "stripe": "^13.2.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
