--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
+    "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^2.1.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -22,8 +24,10 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "firebase": "^10.1.0",
+    "framer-motion": "^10.16.1",
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "next": "^13.4.10",
     "npm": "^9.8.1",
