--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-facebook-login": "^4.1.1",
+    "react-horizontal-scrolling-menu": "^4.1.0",
     "react-player": "^2.12.0",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
